package NFMsg;

enum BuildingList_RecordColType
{
	BuildingList_BuildingID		=0; // BuildingID
	BuildingList_BuildingGUID		=1; // BuildingGUID
	BuildingList_State		=2; // State
	BuildingList_PosX		=3; // PosX
	BuildingList_PosY		=4; // PosY
	BuildingList_PosZ		=5; // PosZ
	BuildingList_StateStartTime		=6; // StateStartTime
	BuildingList_StateEndTime		=7; // StateEndTime
}

enum BuildingProduce_RecordColType
{
	BuildingProduce_BuildingGUID		=0; // BuildingGUID
	BuildingProduce_ItemID		=1; // ItemID
	BuildingProduce_LeftCount		=2; // LeftCount
	BuildingProduce_OnceTime		=3; // OnceTime
	BuildingProduce_OnceStartTime		=4; // OnceStartTime
}

enum GroupMemberList_RecordColType
{
	GroupMemberList_GUID		=0; // GUID
	GroupMemberList_Online		=1; // Online
	GroupMemberList_GameID		=2; // GameID
}

enum ChatList_RecordColType
{
	ChatList_GUID		=0; // GUID
	ChatList_msg		=1; // msg
	ChatList_time		=2; // time
}

enum GuildBoss_RecordColType
{
	GuildBoss_GUID		=0; // GUID
	GuildBoss_Name		=1; // Name
	GuildBoss_Level		=2; // Level
	GuildBoss_Job		=3; // Job
	GuildBoss_Donation		=4; // Donation
	GuildBoss_VIP		=5; // VIP
	GuildBoss_Offline		=6; // Offline
	GuildBoss_Power		=7; // Power
}

enum GuildMemberList_RecordColType
{
	GuildMemberList_GUID		=0; // GUID
	GuildMemberList_Name		=1; // Name
	GuildMemberList_Level		=2; // Level
	GuildMemberList_Job		=3; // Job
	GuildMemberList_Donation		=4; // Donation
	GuildMemberList_Receive		=5; // Receive
	GuildMemberList_VIP		=6; // VIP
	GuildMemberList_Online		=7; // Online
	GuildMemberList_Power		=8; // Power
	GuildMemberList_Title		=9; // Title
	GuildMemberList_GameID		=10; // GameID
}

enum GuildEvent_RecordColType
{
	GuildEvent_GUID		=0; // GUID
	GuildEvent_Name		=1; // Name
	GuildEvent_Level		=2; // Level
	GuildEvent_Job		=3; // Job
	GuildEvent_Donation		=4; // Donation
	GuildEvent_VIP		=5; // VIP
	GuildEvent_Offline		=6; // Offline
	GuildEvent_Power		=7; // Power
}

enum GuildHouse_RecordColType
{
	GuildHouse_GUID		=0; // GUID
	GuildHouse_Name		=1; // Name
	GuildHouse_Level		=2; // Level
	GuildHouse_Job		=3; // Job
	GuildHouse_Donation		=4; // Donation
	GuildHouse_VIP		=5; // VIP
	GuildHouse_Offline		=6; // Offline
	GuildHouse_Power		=7; // Power
}

enum GuildSkill_RecordColType
{
	GuildSkill_GUID		=0; // GUID
	GuildSkill_Name		=1; // Name
	GuildSkill_Level		=2; // Level
	GuildSkill_Job		=3; // Job
	GuildSkill_Donation		=4; // Donation
	GuildSkill_VIP		=5; // VIP
	GuildSkill_Offline		=6; // Offline
	GuildSkill_Power		=7; // Power
}

enum PosList_RecordColType
{
	PosList_X		=0; // X
	PosList_Y		=1; // Y
	PosList_Z		=2; // Z
	PosList_StayTime		=3; // StayTime
}

enum PlayerViewItem_RecordColType
{
	PlayerViewItem_ConfigID		=0; // ConfigID
	PlayerViewItem_EnhanceLevel		=1; // EnhanceLevel
	PlayerViewItem_InlayStone		=2; // InlayStone
	PlayerViewItem_SagecraftLevel		=3; // SagecraftLevel
}

enum CommPropertyValue_RecordColType
{
	CommPropertyValue_MAXHP		=0; // MAXHP
	CommPropertyValue_MAXMP		=1; // MAXMP
	CommPropertyValue_MAXSP		=2; // MAXSP
	CommPropertyValue_HPREGEN		=3; // HPREGEN
	CommPropertyValue_SPREGEN		=4; // SPREGEN
	CommPropertyValue_MPREGEN		=5; // MPREGEN
	CommPropertyValue_ATK_VALUE		=6; // ATK_VALUE
	CommPropertyValue_DEF_VALUE		=7; // DEF_VALUE
	CommPropertyValue_MOVE_SPEED		=8; // MOVE_SPEED
	CommPropertyValue_ATK_SPEED		=9; // ATK_SPEED
	CommPropertyValue_ATK_FIRE		=10; // ATK_FIRE
	CommPropertyValue_ATK_LIGHT		=11; // ATK_LIGHT
	CommPropertyValue_ATK_ICE		=12; // ATK_ICE
	CommPropertyValue_ATK_POISON		=13; // ATK_POISON
	CommPropertyValue_DEF_FIRE		=14; // DEF_FIRE
	CommPropertyValue_DEF_LIGHT		=15; // DEF_LIGHT
	CommPropertyValue_DEF_ICE		=16; // DEF_ICE
	CommPropertyValue_DEF_POISON		=17; // DEF_POISON
	CommPropertyValue_DIZZY_GATE		=18; // DIZZY_GATE
	CommPropertyValue_MOVE_GATE		=19; // MOVE_GATE
	CommPropertyValue_SKILL_GATE		=20; // SKILL_GATE
	CommPropertyValue_PHYSICAL_GATE		=21; // PHYSICAL_GATE
	CommPropertyValue_MAGIC_GATE		=22; // MAGIC_GATE
	CommPropertyValue_BUFF_GATE		=23; // BUFF_GATE
}

enum BagItemList_RecordColType
{
	BagItemList_GUID		=0; // GUID
	BagItemList_ConfigID		=1; // ConfigID
	BagItemList_ItemCount		=2; // ItemCount
	BagItemList_Bound		=3; // Bound
	BagItemList_ExpiredType		=4; // ExpiredType
	BagItemList_SlotCount		=5; // SlotCount
	BagItemList_InlayStone1		=6; // InlayStone1
	BagItemList_InlayStone2		=7; // InlayStone2
	BagItemList_InlayStone3		=8; // InlayStone3
	BagItemList_InlayStone4		=9; // InlayStone4
	BagItemList_InlayStone5		=10; // InlayStone5
	BagItemList_InlayStone6		=11; // InlayStone6
	BagItemList_EnhancedLevel		=12; // EnhancedLevel
	BagItemList_SagecraftLevel		=13; // SagecraftLevel
	BagItemList_SagecraftStone		=14; // SagecraftStone
	BagItemList_RandProperty		=15; // RandProperty
	BagItemList_Date		=16; // Date
	BagItemList_BaseProperty		=17; // BaseProperty
}

enum EctypeList_RecordColType
{
	EctypeList_EctypeID		=0; // EctypeID
	EctypeList_IsPass		=1; // IsPass
	EctypeList_Star		=2; // Star
}

enum DropItemList_RecordColType
{
	DropItemList_MonsterID		=0; // MonsterID
	DropItemList_ItemID		=1; // ItemID
	DropItemList_ItemCount		=2; // ItemCount
	DropItemList_DrawState		=3; // DrawState
}

enum SkillTable_RecordColType
{
	SkillTable_SkillID		=0; // SkillID
	SkillTable_SkillLevel		=1; // SkillLevel
	SkillTable_SkillStone		=2; // SkillStone
	SkillTable_SkillSoulLevel		=3; // SkillSoulLevel
}

enum TaskMonsterList_RecordColType
{
	TaskMonsterList_MonsterID		=0; // MonsterID
	TaskMonsterList_CurrentKillCount		=1; // CurrentKillCount
	TaskMonsterList_RequireKillCount		=2; // RequireKillCount
	TaskMonsterList_TaskID		=3; // TaskID
}

enum TaskList_RecordColType
{
	TaskList_TaskID		=0; // TaskID
	TaskList_TaskStatus		=1; // TaskStatus
	TaskList_Process		=2; // Process
}

enum PVPList_RecordColType
{
	PVPList_ID		=0; // ID
	PVPList_Name		=1; // Name
	PVPList_Level		=2; // Level
}

enum ChatGroup_RecordColType
{
	ChatGroup_ChatType		=0; // ChatType
	ChatGroup_GroupGUID		=1; // GroupGUID
}

